updates to Alana, Celine, Ceres, Eliot, Steve, About

--- a/bios/alana.qmd
+++ b/bios/alana.qmd
@@ -19,9 +19,12 @@ about:
 ---
 
 ::: {#alana}
-(PhD 2018)
+Research fellow at the Bulkley Valley Research Centre.
 
-Dissertation: Whitebark pine at the northern edge: current constraints and future potential northern distribution under a changing climate.
+Alana's PhD was completed in 2018.
 
-Currently a research fellow at the Bulkley Valley Research Centre.
+Dissertation title:
+
+*Whitebark pine at the northern edge: current constraints and future potential northern distribution under a changing climate.*
+
 :::
