--- a/workshops/June-2024-SpaDES-workshop.qmd
+++ b/workshops/June-2024-SpaDES-workshop.qmd
@@ -1,13 +1,13 @@
 ---
-title: "SpaDES Workshop (Planned June 2024)"
-author: "Eliot McIntire"
-date: "June 10, 2024"
+title: "Reproducible workflows for landscapes with SpaDES and PERFICT"
 image: https://besjournals.onlinelibrary.wiley.com/cms/asset/db13319c-88b4-4821-9eaa-a2e62364b399/mee314034-fig-0004-m.jpg
-categories:
-  - R
-  - SpaDES Workshops
-  - Training
 comments: false
 ---
 
-1-3 day SpaDES workshop intended for scientists who have some knowledge of R.
+
+
+
+
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc0RlY9xjbaaIskoX_zR8qy-UBb95JZ5TVjOtyIlJLNYs9CEQ/viewform?embedded=true" width="680" height="2982" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
+
