--- a/training/realexamples.qmd
+++ b/training/realexamples.qmd
@@ -1,6 +1,6 @@
 # "Real-world" examples of SpaDES workflows
 
-This chapter will take you through several "real-world" examples that use SpaDES
+This section will take you through several "real-world" examples that use SpaDES
 to build and execute a workflow. By "real-world" we mean workflows that use 
 models that have been/are used in research or application.
 
