--- a/training/NewModuleIntro.qmd
+++ b/training/NewModuleIntro.qmd
@@ -4,7 +4,6 @@
 knitr::opts_chunk$set(eval = FALSE)
 ```
 
-
 SpaDES modules are comprised of R code that has metadata and the gets
 put into functions. With this in mind, we can start with some simple R
 code.
@@ -167,7 +166,6 @@ Copy this to the module, replacing the `.inputObjects` function.
     sim$y <- rnorm(10, mean = 20, sd = 2)
   return(invisible(sim))
 }
-
 ```
 
 ## Run the new module
@@ -187,19 +185,13 @@ outputs that model, and plots the fit.
 
 1.  What are some things we "gained" from putting our simple 3 lines of
     code into a module?
-
--   We can turn off plotting easily. Set `.plotInitialTime = NA` in the
-    `simInitAndSpades` call.
-
+    -   We can turn off plotting easily. Set `.plotInitialTime = NA` in
+        the `simInitAndSpades` call.
 2.  What are some things we "lost"?
-
--   More complicated. (overkill for these 3 lines?)
-
+    -   More complicated. (overkill for these 3 lines?)
 3.  What if we used an R package that wasn't in the base packages list?
-
--   See `?defineModule` for all the metadata items. Specifically, see
-    `reqdPkgs`.
-
+    -   See `?defineModule` for all the metadata items. Specifically,
+        see `reqdPkgs`.
 4.  What is the `sim`? See `?simList`
 
 ## See also
