--- a/training/castorExample.qmd
+++ b/training/castorExample.qmd
@@ -66,7 +66,7 @@ outMod <- getCastorModulesAndDB(paths = list("modulePath" = "~/tutos/castorExamp
                                             "forestryCastor", 
                                             "blockingCastor"),
                                 dbURL = "https://drive.google.com/file/d/1-2POunzC7aFbkKK5LeBJNsFYMBBY8dNx/view?usp=sharing",
-                                dbPath = "R/scenarios/comparison_stsm")
+                                dbPath = "~/tutos/castorExample/R/scenarios/comparison_stsm")
 
 ## set up the workflow paths, dependencies and modules
 ## as well as simulation parameters, (some) inputs and outputs
