--- a/training/castorExample.qmd
+++ b/training/castorExample.qmd
@@ -76,7 +76,7 @@ outMod <- getCastorModulesAndDB(paths = list("modulePath" = "~/tutos/castorExamp
 ## as well as simulation parameters, (some) inputs and outputs
 out <- setupProject(
   paths = list("inputPath" = "modules/forestryCastor/inputs",
-               "outputPath" = "/R/scenarios/comparison_stsm/outputs",
+               "outputPath" = "R/scenarios/comparison_stsm/outputs",
                "modulePath" = "modules/",
                "cachePath" = "modules/forestryCastor",
                "projectPath" = "~/tutos/castorExample"),
@@ -182,7 +182,7 @@ Use the following functions to access workflow/model properties. `events()`, for
 instance will output the scheduled events, which at this point are only the `init`
 events of each module as you can see in the output below.
 
-``` {r}
+``` {r inspectSimList}
 #| eval: false
 
 ## inspect the `simList`
@@ -195,7 +195,7 @@ SpaDES.core::times(castorInit)
 SpaDES.core::events(castorInit) 
 ```
 
-```{r}
+```{r events}
 #| echo: false
 
 SpaDES.core::events(castorInit) 
@@ -208,7 +208,7 @@ interacts with the other. Recall that these interactions arise from object "exch
 between modules, which are deduced by `simInit()` from module metadata (@fig-objectDiagram)
 -- i.e., if a module's inputs are another's outputs, then the first module will follow the second.
 
-```{r}
+```{r diagrams}
 #| eval: false
 
 SpaDES.core::moduleDiagram(castorInit)
@@ -241,7 +241,7 @@ knitr::include_graphics(normalizePath("assets/img/castorExample_objDiagram.png",
 `spades()` runs the simulation, beginning with the execution of the `init` events.
 Notice how the result of `outputs()` differs from previously.
 
-```{r}
+```{r runsim}
 #| eval: false
 
 castorSim <- SpaDES.core::spades(castorInit)
