mv DiagrammeR to setupProject and ucomment install lines

--- a/training/castorExample.qmd
+++ b/training/castorExample.qmd
@@ -55,8 +55,8 @@ script](https://github.com/PredictiveEcology/PredictiveEcology.org/blob/training
 #| results: hide
 ## install/load necessary packages
 repos <- c("predictiveecology.r-universe.dev", getOption("repos"))
-# install.packages(c("remotes", "reproducible", "googledrive"), repos = repos)
-# remotes::install_github("PredictiveEcology/SpaDES.project@transition")   ## to deal with modules in nested GH folders.
+install.packages(c("remotes", "reproducible", "googledrive"), repos = repos)
+remotes::install_github("PredictiveEcology/SpaDES.project@transition")   ## to deal with modules in nested GH folders.
 library(SpaDES.project)
 
 ## get Castor modules
@@ -88,6 +88,7 @@ out <- setupProject(
   ## install but don't load these:
   packages = c(
     "DBI", 
+    "DiagrammeR",
     "keyring",
     "rgdal", 
     "RPostgreSQL", 
