--- a/training/NewModuleIntro.qmd
+++ b/training/NewModuleIntro.qmd
@@ -35,7 +35,7 @@ that the function `rnorm` is in the `stats` package. Fortunately for us,
 this is a default ("base") package in R and it is always pre-loaded. So,
 nothing to do here.
 
-```{r}
+```{r,eval=FALSE}
 > rnorm
 function (n, mean = 0, sd = 1) 
 ...
