--- a/training/Scheduling.qmd
+++ b/training/Scheduling.qmd
@@ -1,176 +1,209 @@
----
-title: 'Scheduling Events'
-format: 
-  html:
-    page-layout: full
-comments: false
-editor_options: 
-  chunk_output_type: console
----
+```{r setup}
+#| include: false
+knitr::opts_chunk$set(tidy = FALSE, 
+                      eval = FALSE,
+                      warning = FALSE, 
+                      message = FALSE, 
+                      error = FALSE)
+
+## truncate text output
+hook_output <- knitr::knit_hooks$get("output")
+
+knitr::knit_hooks$set(output = function(x, options) {
+  if (!is.null(n <- options$outlines)) {
+    x <- xfun::split_lines(x)
+    if (length(x) > n) {
+      # truncate the output
+      x <- c(head(x, n), "....\n")
+    }
+    x <- paste(x, collapse = "\n")
+  }
+  hook_output(x, options)
+})
+
+options(repos = "http://cran.us.r-project.org")
+if (!require("Require")) {
+  install.packages("Require", repos = c("https://predictiveecology.r-universe.dev", getOption("repos")))
+}
+Require::Require(c("ggplot2", "SpaDES.core"))
+
+```
 
 See [New Module Introducion](NewModuleIntro.qmd) for creation of a simple module.
 
 Here, we will talk about [scheduling events](https://rdocumentation.org/packages/SpaDES.core/versions/2.0.5/topics/scheduleEvent). 
-`[SpaDES.core::scheduleEvent]`
 
-# Section {#sec-}
+Scheduling events allows us to control when things happen in a sequnence. This can be as simple as "this module will just do one thing" to "this module will do several things, some of which repeat". We will use a simple example where there is one thing that happens "once" and one thing that happens several times. In "normal" R-speak, we will write a loop.
 
-Scheduling events allows 
-SpaDES modules are comprised of R code that has metadata and the gets put into functions. With this in mind, we can start with some simple R code.
+Return to example in [New Module Introducion](NewModuleIntro.qmd). This time, we will predict from the linear model, with updated values of the `y`. In this simple example, we will pretend that each prediction is "one year into the future" and that our `y` will slowly get bigger.
 
-We will start by thinking about metadata: *What is metadata?*
+```{r,eval=TRUE}
+# .inputObjects ##############
+y <- rnorm(10)
 
-We can examine the following code chunk. First, we ask: what are the **inputs** and the **outputs**?
-
-```{r,eval=FALSE}
-
-# create some data
+# Init #####
 x <- y + rnorm(10)
 # fit a linear model
 out <- lm(x ~ y)
+pred <- list()
 
-# plot the fit
-plot(out)
+# Prediction #####
+startYear <- 2023
+years <- startYear:(startYear + 10) + 1
+for (year in years - startYear) {
+  pred[[year]] <- predict(out, newdata = data.frame(y = rnorm(10) + year))
+}
+
+# Plot ####
+predictions <- data.frame(year = rep(years, each = 10), prediction = unlist(pred))
+# plot the predictions
+ggplot(predictions, aes(x = year, y = prediction, colour = year)) + geom_point() + geom_smooth()
+```
+In the above code, there are 4 sections. These will each be copied into the SpaDES module below, in their respective sections. We have added 1 new section, called "Prediction". 
+
+
+## Convert to a module
+
+```{r newodule,eval=FALSE}
+SpaDES.core::newModule(name = "scheduling", path = ".")
 ```
 
-The **inputs** to this chunk are just one: the object `y`. This code will not work (i.e., it will cause an error) if `y` is not defined. The **outputs** are `x` and `out`. Both of these are created within this chunk.
+Open the module file, which will be printed in the console. We can scroll down to the `Init` function. Copy the `Init`, the `.inputObjects`, the `Plot` part into the new modules, as we did in [New Module Introducion](NewModuleIntro.qmd). 
 
-Next, *what are the package dependencies?*. We see that there are two functions: `rnorm` and `lm`. We don't know what packages they are in, so we can find out by typing them at the R prompt. At the bottom, it says that the function `rnorm` is in the `stats` package. Fortunately for us, this is a default ("base") package in R and it is always pre-loaded. So, nothing to do here.
-
-```{r,eval=FALSE}
-> rnorm
-function (n, mean = 0, sd = 1) 
-...
-<environment: namespace:stats>
-```
-
-So, our metadata are:
-
--   Inputs: `y`
--   Outputs: `x`, `out`
--   Package dependencies: Base packages only
-
-We will next put them into the correct places in the new SpaDES module.
-
-### Make the module
-
-Now we use the `SpaDES` function `newModule` to make a new module. (see )
-
-```{r,eval=FALSE}
-SpaDES.core::newModule(name = "My_linear_model", path = ".")
-```
-
-This will create a new folder with several files in it. See `?newModule` for details. For now, run the above and open the `.R` that is created.
-
-### Edit metadata
-
-Scroll down to where it says `inputObjects` and `expectsInputs`. We will put `y` there.
-
-```{r,eval=FALSE}
-inputObjects = bindrows(
-    expectsInput(objectName = "y", objectClass = "numeric", desc = "The inputs for the linear model", sourceURL = NA)
-  )
-```
-
-Next, scroll down to where it says `outputObjects` and `createsOutput`. We will put `x` and `out` there. Don't forget a comma at the end of each `createsOutput` as these are arguments to `bindrows`
-
-```{r,eval=FALSE}
-outputObjects = bindrows(
-    createsOutput(objectName = "x", objectClass = "numeric", desc = "The randomly created varible that is used as a response variable"),
-    createsOutput(objectName = "out", objectClass = "lm", desc = "A linear model object from the equation (x ~ y)")
-  )
-```
-
-### Put code in `Init` function
-
-First, we move the first two lines of code into a function. We will choose the `Init` function. We will discuss why in a bit.
+We must make the same decisions about "local" that are OK if they don't get keps and "global" objects that we want to keep. These *global* objects get put into `sim`. Your new module should have these 3 new sections:
 
 ```{r,eval=FALSE}
 Init <- function(sim) {
-  x <- y + rnorm(10)
-  out <- lm(x ~ y)
-  return(invisible(sim))
+  x <- sim$y + rnorm(10)
+  # fit a linear model
+  sim$out <- lm(x ~ sim$y)
+  sim$pred <- list()
 }
-```
 
-### Sharing inputs and outputs
-
-You may have noticed that the `Init` function template defines a function with a `sim` argument. This is an object we haven't learned about yet; we will just think of it as a list where we can put objects we want to share with other modules or "just keep them for later", such as our **inputs** and **outputs**.
-
-To share these objects, we assign them to the `sim` list using the normal R notations. We have to make this modification 5 times for every instance of our **inputs** and **outputs**
-
-```{r,eval=FALSE}
-Init <- function(sim) {
-  sim$x <- sim$y + rnorm(10)
-  sim$out <- lm(sim$x ~ sim$y)
-  return(invisible(sim))
-}
-```
-
-Now we have a module that creates two objects, `x` and `out` and puts them in the `sim` objects. This all happens in a function called `Init`. Next: the `plot(out)`
-
-### Events
-
-We can look at our 3 lines of example and think, "this is 2 steps: a first that does the model and a second that plots it" (of course, you can divide this up in several ways; we will go with this for now.).
-
-We can call the 2 steps, **events** and imagine we could run them in sequence... first, lets put the `plot` in a function. We will choose the `plotFun` function. We will also add the `sim$` because the `out` will be shared because it is in the `sim` "list".
-
-```{r,eval=FALSE}
 plotFun <- function(sim) {
-  plot(sim$out)
-  return(invisible(sim))
+  sim$predictions <- data.frame(year = rep(sim$years, each = 10), prediction = unlist(sim$pred))
+  # plot the predictions
+  sim$gg <- ggplot(sim$predictions, aes(x = year, y = prediction, colour = year)) + geom_point() + geom_smooth()
+  print(sim$gg)
 }
-```
 
-The template already has some default code that actually puts the events in an order without us needing to do anything. It also has a parameter that determines whether the plot will happen or not. We will just accept the defaults for now.
-
-### Default Values
-
-Recall, we don't have a value for `y`. This means that if you run the following, you will get an error:
-
-```{r,eval=FALSE}
-SpaDES.core::simInitAndSpades(modules = "My_linear_model", paths = list(modulePath = "tutos/NewModuleIntro"))
-```
-
-Just like functions in R, we can supply default values for our **inputs**. We put these in a function at the bottom called `.inputObjects`.
-
-Copy this to the module, replacing the `.inputObjects` function.
-
-```{r,eval=FALSE}
 .inputObjects <- function(sim) {
-  if (!suppliedElsewhere("y", sim))
-    sim$y <- rnorm(10, mean = 20, sd = 2)
+  sim$y <- rnorm(10)
+}
+```
+
+## New Event Function -- Prediction
+
+The new part is the `for` loop. This part takes new covariates (new values for `y`) that emulates "predicted" covariates, derives a newly predicted `x`, and we then keep these *predicted* `x` values each year. 
+
+We use `scheduleEvent` to do this. Copy the `Prediction` part into a new function:
+
+```{r,eval=FALSE} 
+Prediction <- function(sim) {
+  startYear <- 2023
+  sim$years <- startYear:(startYear + 10) + 1
+  for (year in sim$years - startYear) {
+    sim$pred[[year]] <- predict(sim$out, newdata = data.frame(y = rnorm(10) + year))
+  }
   return(invisible(sim))
 }
 
 ```
 
-## Run the new module
+## Scheduling
 
-Now, we have **inputs** and **outputs** defined, our code has been place in 2 spots, and we have default value for `y`.
+Now we need to tell SpaDES when to do each of the steps or "events". The `Init`, we do once, at the start. The `plotFn` we do once, but this time it is at the "end". The `.inputObjects` always happens once and "before the start". The last part (i.e., the prediction event) must happen 10 times, and it must start after `Init` and before the `plotFn`. 
 
-```{r,eval=FALSE}
-SpaDES.core::simInitAndSpades(modules = "My_linear_model", paths = list(modulePath = "tutos/NewModuleIntro"))
+### doEvent
+
+There is a special function in a `SpaDES` module called `doEvent`. SpaDES calls this function once, passing the argument `event = "init"`. That means that R will enter into this function only once and run only the `init` part, unless we specifically tell it to do more. We use the `scheduleEvent` function. We place this function anywhere we want, in general. In this example, we will place it in a few places.
+
+#### In the `init`
+
+We look at the `init` event and we see 2 `scheduleEvent` calls that come with the template. We will use those to learn. In each "event", we often see one part that "does something" and another part that "schedules something". In the default template, we "do" the `Init` function and we schedule `plot` and `save`. We can delete the `save` event, as we won't do that here. But we will replace it with "schedule prediction"
+
+See `?start`, `?scheduleEvent`, `?P`
+```{r defaultInit,eval=FALSE}
+sim <- Init(sim)
+
+# schedule future event(s)
+sim <- scheduleEvent(sim, P(sim)$.plotInitialTime, "scheduling", "plot")
+# sim <- scheduleEvent(sim, P(sim)$.saveInitialTime, "scheduling", "save")
+
+# here we create a new event type == "predictions" and we schedule it for `start(sim)`
+sim <- scheduleEvent(sim, start(sim), "scheduling", "predictions") 
 ```
 
-We now have a SpaDES module that has metadata, generates random starting data (if the user doesn't supply an alternative), fits a linear model, outputs that model, and plots the fit.
+Copy the above code chunk to the `init` section so that it looks like this:
+```{r newInit,eval=FALSE}
+switch(
+    eventType,
+    init = {
+      sim <- Init(sim)
+      
+      # schedule future event(s)
+      sim <- scheduleEvent(sim, P(sim)$.plotInitialTime, "scheduling", "plot")
+      # sim <- scheduleEvent(sim, P(sim)$.saveInitialTime, "scheduling", "save")
+      
+      # here we create a new event type == "predictions" and we schedule it for `start(sim)`
+      sim <- scheduleEvent(sim, start(sim), "scheduling", "predictions") 
+    }
+```
+
+### The new event
+
+We add code to make a new event, called `"predictions"` (it must match what we wrote in the `scheduleEvent`). In this event, we "do" the prediction, then we schedule the next prediction at "time plus 1"
+
+See `?time`
+```{r predictionEvent,eval=FALSE} 
+predictions = {
+  # do the Prediction
+  sim <- Prediction(sim)
+  
+  # schedule the next Prediction
+  sim <- scheduleEvent(sim, time(sim) + 1, "scheduling", "predictions") 
+}
+```
+
+### Double check existing events
+
+If we ran the above changes, we would see an error because the `plotFn` is, by default, scheduled to run at the time that is specified by `.plotInitialTime`, which by default is `start(sim)`. We have no data yet at that time. So, we have to update the 
+
+```{r,eval=FALSE}
+scheduleEvent(sim, end(sim), "scheduling", "plot")
+```
+
+
+### Update module metadata
+
+Like in [New Module Introducion](NewModuleIntro.qmd), we have to update the module metadata ... what are the inputs, outputs, parameters. `SpaDES` will not error if the metadata are not correct, but it will try to point out the problems.
+
+## Run
+
+The resulting module can now be run.
+
+```{r run,eval=FALSE} 
+SpaDES.core::simInitAndSpades(modules = "scheduling", paths = list(modulePath = "."))
+
+```
+
+A complete version of this new module can be found at [scheduling.R](../../tutos/scheduling/scheduling.R). You can copy this over top of the new module that you created here, i.e., keep the same folder structure.
+
+
+
 
 ## Questions
 
-1.  What are some things we "gained" from putting our simple 3 lines of code into a module?
-
--   We can turn off plotting easily. Set `.plotInitialTime = NA` in the `simInitAndSpades` call.
-
-2.  What are some things we "lost"?
-
--   More complicated. (overkill for these 3 lines?)
-
-3.  What if we used an R package that wasn't in the base packages list?
-
--   See `?defineModule` for all the metadata items. Specifically, see `reqdPkgs`.
-
-4.  What is the `sim`? See `?simList`
+1.  how are some ways that `scheduleEvent` is different from a "loop"?
+    -   We can change the "step" length between events.
+    -   We can interweave events, e.g., a fire event then a tree growth event
+    
+2.  When is a loop better than scheduling?
+    -   Loops are much faster than scheduling. 
+    -   But really, avoid loops in R if you can help it
+3.  Chances are that the first versions of this module didn't work. How do you fix it?
+    -   [Learn how to debug in R and SpaDES](https://github.com/PredictiveEcology/SpaDES/wiki/Debugging)
 
 ## See also
 
-See also: `?expectsInput`, `?createsOutput`, `?simInitAndSpades`, `?newModule`
+See also: `?scheduleEvent`, `?P`, `?time`, `?start`, `?end`
