--- a/training/castorExample.qmd
+++ b/training/castorExample.qmd
@@ -25,7 +25,7 @@ knitr::knit_hooks$set(output = function(x, options) {
 options(repos = "http://cran.us.r-project.org")
 
 if (Sys.getenv("USERNAME") == "GHA") {
-  googledrive::drive_auth(path = Sys.getenv("GOOGLE_APPLICATION_CREDENTIALS"))
+  googledrive::drive_auth(path = Sys.getenv("GOOGLE_APP_CREDENTIALS"))
 }
 ```
 
