--- a/training/NewModuleIntro.qmd
+++ b/training/NewModuleIntro.qmd
@@ -1,8 +1,45 @@
 ---
-execute: 
-  eval: false
+title       : "New module -- Introduction"
+author      : "Eliot McIntire"
+date        : "May 2024"
+editor_options:
+  chunk_output_type: console
 ---
-# Introduction
+
+## Creating a new module
+
+
+```{r setup}
+#| include: false
+knitr::opts_chunk$set(tidy = FALSE, 
+                      eval = FALSE,
+                      warning = FALSE, 
+                      message = FALSE, 
+                      error = FALSE)
+
+## truncate text output
+hook_output <- knitr::knit_hooks$get("output")
+
+knitr::knit_hooks$set(output = function(x, options) {
+  if (!is.null(n <- options$outlines)) {
+    x <- xfun::split_lines(x)
+    if (length(x) > n) {
+      # truncate the output
+      x <- c(head(x, n), "....\n")
+    }
+    x <- paste(x, collapse = "\n")
+  }
+  hook_output(x, options)
+})
+
+options(repos = "http://cran.us.r-project.org")
+if (!require("Require")) {
+  install.packages("Require", repos = c("https://predictiveecology.r-universe.dev", getOption("repos")))
+}
+
+```
+
+## New Module Introduction
 
 SpaDES modules are comprised of R code that has metadata and the gets
 put into functions. With this in mind, we can start with some simple R
@@ -13,7 +50,7 @@ We will start by thinking about metadata: *What is metadata?*
 We can examine the following code chunk. First, we ask: what are the
 **inputs** and the **outputs**?
 
-```{r}
+```{r,eval=FALSE}
 # create some data
 x <- y + rnorm(10)
 # fit a linear model
@@ -55,7 +92,7 @@ We will next put them into the correct places in the new SpaDES module.
 Now we use the `SpaDES` function `newModule` to make a new module. (see
 )
 
-```{r}
+```{r,eval=FALSE}
 SpaDES.core::newModule(name = "My_linear_model", path = ".")
 ```
 
@@ -67,7 +104,7 @@ for details. For now, run the above and open the `.R` that is created.
 Scroll down to where it says `inputObjects` and `expectsInputs`. We will
 put `y` there.
 
-```{r}
+```{r,eval=FALSE}
 inputObjects = bindrows(
     expectsInput(objectName = "y", objectClass = "numeric", desc = "The inputs for the linear model", sourceURL = NA)
   )
@@ -77,7 +114,7 @@ Next, scroll down to where it says `outputObjects` and `createsOutput`.
 We will put `x` and `out` there. Don't forget a comma at the end of each
 `createsOutput` as these are arguments to `bindrows`
 
-```{r}
+```{r,eval=FALSE}
 outputObjects = bindrows(
     createsOutput(objectName = "x", objectClass = "numeric", desc = "The randomly created varible that is used as a response variable"),
     createsOutput(objectName = "out", objectClass = "lm", desc = "A linear model object from the equation (x ~ y)")
@@ -89,7 +126,7 @@ outputObjects = bindrows(
 First, we move the first two lines of code into a function. We will
 choose the `Init` function. We will discuss why in a bit.
 
-```{r}
+```{r,eval=FALSE}
 Init <- function(sim) {
   x <- y + rnorm(10)
   out <- lm(x ~ y)
@@ -109,7 +146,7 @@ To share these objects, we assign them to the `sim` list using the
 normal R notations. We have to make this modification 5 times for every
 instance of our **inputs** and **outputs**
 
-```{r}
+```{r,eval=FALSE}
 Init <- function(sim) {
   sim$x <- sim$y + rnorm(10)
   sim$out <- lm(sim$x ~ sim$y)
@@ -132,7 +169,7 @@ sequence... first, lets put the `plot` in a function. We will choose the
 `plotFun` function. We will also add the `sim$` because the `out` will
 be shared because it is in the `sim` "list".
 
-```{r}
+```{r,eval=FALSE}
 plotFun <- function(sim) {
   plot(sim$out)
   return(invisible(sim))
@@ -149,7 +186,7 @@ the defaults for now.
 Recall, we don't have a value for `y`. This means that if you run the
 following, you will get an error:
 
-```{r}
+```{r,eval=FALSE}
 SpaDES.core::simInitAndSpades(modules = "My_linear_model", paths = list(modulePath = "tutos/NewModuleIntro"))
 ```
 
@@ -159,7 +196,7 @@ Just like functions in R, we can supply default values for our
 
 Copy this to the module, replacing the `.inputObjects` function.
 
-```{r}
+```{r,eval=FALSE}
 .inputObjects <- function(sim) {
   if (!suppliedElsewhere("y", sim))
     sim$y <- rnorm(10, mean = 20, sd = 2)
@@ -172,7 +209,7 @@ Copy this to the module, replacing the `.inputObjects` function.
 Now, we have **inputs** and **outputs** defined, our code has been place
 in 2 spots, and we have default value for `y`.
 
-```{r}
+```{r,eval=FALSE}
 SpaDES.core::simInitAndSpades(modules = "My_linear_model", paths = list(modulePath = "tutos/NewModuleIntro"))
 ```
 
